@@ -1586,77 +1586,99 @@ proc pkg-compare {oldplist} {
             set maxl [string length $name]
         }
     }
-    foreach name $unified {
-	set skip 0
-	set suffix ""
-	set prefix "   "
-	if {![info exists curpkg($name)]} {set curpkg($name) {}}
-	if {![info exists oldpkg($name)]} {
-	    set oldpkg($name) {}
-	    set suffix " NEW"
-	    set prefix "Nn "
-	    set skip 1
+
+    set maxm 0
+    foreach m [modules] {
+        if {[string length $m] > $maxm} {
+            set maxm [string length $m]
+        }
+    }
+
+    set lastm ""
+    foreach m [lsort -dict [modules]] {
+	set packages {}
+	foreach {p ___} [ppackages $m] {
+	    lappend packages $p
 	}
-	if {!$skip} {
-	    # Draw attention to changed packages where version is
-	    # unchanged.
+	foreach name [lsort -dict $packages] {
+	    set skip 0
+	    set suffix ""
+	    set prefix "   "
+	    if {![info exists curpkg($name)]} {set curpkg($name) {}}
+	    if {![info exists oldpkg($name)]} {
+		set oldpkg($name) {}
+		set suffix " NEW"
+		set prefix "Nn "
+		set skip 1
+	    }
+	    if {!$skip} {
+		# Draw attention to changed packages where version is
+		# unchanged.
 
-	    set vequal [struct::set equal $oldpkg($name) $curpkg($name)]
+		set vequal [struct::set equal $oldpkg($name) $curpkg($name)]
 
-	    if {$changed($name)} {
-		if {$vequal} {
-		    # Changed according to ChangeLog, Version is not. ALERT.
-		    set prefix "!! "
-		    set suffix "\t<<< MISMATCH. Version ==, ChangeLog ++"
+		if {$changed($name)} {
+		    if {$vequal} {
+			# Changed according to ChangeLog, Version is not. ALERT.
+			set prefix "!! "
+			set suffix "\t<<< MISMATCH. Version ==, ChangeLog ++"
+		    } else {
+			# Both changelog and version number indicate a change.
+			# Small alert, have to classify the order of changes.
+			set prefix "cv "
+			set suffix "\t=== Classify changes."
+		    }
 		} else {
-		    # Both changelog and version number indicate a change.
-		    # Small alert, have to classify the order of changes.
-		    set prefix "cv "
-		    set suffix "\t=== Classify changes."
+		    if {$vequal} {
+			# Versions are unchanged, changelog also indicates no change.
+			# No particular attention here.
+		    } else {
+			# Versions changed, but according to changelog nothing in code. ALERT.
+			set prefix "!! "
+			set suffix "\t<<< MISMATCH. ChangeLog ==, Version ++"
+		    }
 		}
-	    } else {
-		if {$vequal} {
-		    # Versions are unchanged, changelog also indicates no change.
-		    # No particular attention here.
-		} else {
-		    # Versions changed, but according to changelog nothing in code. ALERT.
-		    set prefix "!! "
-		    set suffix "\t<<< MISMATCH. ChangeLog ==, Version ++"
+		if {[info exists approved($name)]} {
+		    set prefix "   "
+		    set suffix ""
 		}
 	    }
-	    if {[info exists approved($name)]} {
-		set prefix "   "
-		set suffix ""
+
+	    # To handle multiple versions we match the found versions up
+	    # by major version. We assume that we have only one version
+	    # per major version. This allows us to detect changes within
+	    # each major version, new major versions, etc.
+
+	    array set om {} ; foreach v $oldpkg($name) {set om([lindex [split $v .] 0]) $v}
+	    array set cm {} ; foreach v $curpkg($name) {set cm([lindex [split $v .] 0]) $v}
+
+	    set all [lsort -dict [struct::set union [array names om] [array names cm]]]
+
+	    sakdebug {
+		puts @@@@@@@@@@@@@@@@
+		parray om
+		parray cm
+		puts all\ $all
+		puts @@@@@@@@@@@@@@@@
 	    }
+
+	    foreach v $all {
+		if {![string equal $m $lastm]} {
+		    set mdis $m
+		} else {
+		    set mdis ""
+		}
+		set lastm $m
+
+		if {[info exists om($v)]} {set ov $om($v)} else {set ov "--"}
+		if {[info exists cm($v)]} {set cv $cm($v)} else {set cv "--"}
+
+		puts stdout ${prefix}[format "%-*s %-*s %-*s %-*s" \
+					  $maxm $mdis $maxl $name 8 $ov 8 $cv]$suffix
+	    }
+
+	    unset om cm
 	}
-
-	# To handle multiple versions we match the found versions up
-	# by major version. We assume that we have only one version
-	# per major version. This allows us to detect changes within
-	# each major version, new major versions, etc.
-
-	array set om {} ; foreach v $oldpkg($name) {set om([lindex [split $v .] 0]) $v}
-	array set cm {} ; foreach v $curpkg($name) {set cm([lindex [split $v .] 0]) $v}
-
-	set all [lsort -dict [struct::set union [array names om] [array names cm]]]
-
-	sakdebug {
-	    puts @@@@@@@@@@@@@@@@
-	    parray om
-	    parray cm
-	    puts all\ $all
-	    puts @@@@@@@@@@@@@@@@
-	}
-
-	foreach v $all {
-	    if {[info exists om($v)]} {set ov $om($v)} else {set ov "--"}
-	    if {[info exists cm($v)]} {set cv $cm($v)} else {set cv "--"}
-
-	    puts stdout ${prefix}[format "%-*s %-*s %-*s" \
-				      $maxl $name 8 $ov 8 $cv]$suffix
-	}
-
-	unset om cm
     }
     return
 }
